Microservicios Usuarios y Cursos.

--- a/curso-kubernetes/pom.xml
+++ b/curso-kubernetes/pom.xml
@@ -13,6 +13,7 @@
   <packaging>pom</packaging>
   <modules>
     <module>msvc-usuarios</module>
+    <module>msvc-cursos</module>
   </modules>
   <name>Archetype - curso-kubernetes</name>
   <url>http://maven.apache.org</url>
