--- a/curso-kubernetes/msvc-cursos/pom.xml
+++ b/curso-kubernetes/msvc-cursos/pom.xml
@@ -7,10 +7,10 @@
 		<artifactId>curso-kubernetes</artifactId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
-	<groupId>org.aguzman.springcloud.msvc.usuarios</groupId>
-	<artifactId>msvc-usuarios</artifactId>
+	<groupId>org.aguzman.springcloud.msvc.cursos</groupId>
+	<artifactId>msvc-cursos</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>msvc-usuarios</name>
+	<name>msvc-cursos</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
@@ -41,8 +41,8 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
